# obs-HyperDecoder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  avermedia_deps.cmake  buildspec.json
cmake/: FFmpeg.cmake
cmake/windows/resources/: installer-Windows.iss.in  resource.rc.in
data/locale/: af-ZA.ini  an-ES.ini  ar-SA.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  mn-MN.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  (+15 more)
i18n/en.lproj/: LICENSE.txt
src/: ffmpeg-decode.c  plugin-main.cpp  win-dshow.cpp
